--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
             </div>
         </div>
     </div>
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+            <div class="col-12 col-md">
+                <img class="mb-2" src="/docs/4.3.1/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
+                <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Features</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Крутые штуковины</a></li>
+                    <li><a class="text-muted" href="#">Случайное преимущество</a></li>
+                    <li><a class="text-muted" href="#">Командное преимущество</a></li>
+                    <li><a class="text-muted" href="#">Штуковины для разработки</a></li>
+                    <li><a class="text-muted" href="#">Что-то ещё</a></li>
+                    <li><a class="text-muted" href="#">В последний раз</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Resources</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Ресурсы</a></li>
+                    <li><a class="text-muted" href="#">Название ресурса</a></li>
+                    <li><a class="text-muted" href="#">Ещё ресурс</a></li>
+                    <li><a class="text-muted" href="#">Последний ресурс</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>About</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Команда</a></li>
+                    <li><a class="text-muted" href="#">Местоположения</a></li>
+                    <li><a class="text-muted" href="#">Приватность</a></li>
+                    <li><a class="text-muted" href="#">Правила пользования</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </div>
 <script src="./assets/js/jquery-3.3.1.slim.min.js"></script>
 <script src="./assets/js/bootstrap.bundle.min.js"></script>
